# mallardmetrics

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LESSONS.md  PERF.md  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  docker-compose.yml  mallard-metrics.toml.example  rust-toolchain.toml
.claude/: seed-demo-data.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
benches/: ingest_bench.rs
deploy/: .env.example  Caddyfile  Dockerfile.caddy  docker-compose.production.yml  setup.sh
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  behavioral-analytics.md  configuration.md  custom.css  data-management.md  deploy-flyio.md  deploy-vps.md  deployment.md  getting-started.md  index.md  mermaid-init.js  monitoring.md  security.md  tracking-script.md
docs/src/api-reference/: auth.md  health.md  index.md  ingestion.md  stats.md
src/: config.rs  lib.rs  main.rs  server.rs
src/api/: auth.rs  errors.rs  funnels.rs  mod.rs  stats.rs
src/dashboard/: mod.rs
src/dashboard/assets/: app.js  index.html  style.css
src/ingest/: buffer.rs  geoip.rs  handler.rs  mod.rs  ratelimit.rs  useragent.rs  visitor_id.rs
src/query/: breakdowns.rs  cache.rs  flow.rs  funnel.rs  metrics.rs  mod.rs  retention.rs  sequences.rs  sessions.rs  timeseries.rs
src/storage/: migrations.rs  mod.rs  parquet.rs  schema.rs
tests/: ingest_test.rs
tracking/: script.js
