[package]
name = "mallard-metrics"
version = "0.1.0"
edition = "2021"
rust-version = "1.93.0"
description = "Self-hosted, privacy-focused web analytics powered by DuckDB and the behavioral extension"
license = "MIT"
repository = "https://github.com/tomtom215/mallardmetrics"
readme = "README.md"
keywords = ["analytics", "web", "duckdb", "privacy", "self-hosted"]
categories = ["web-programming", "database"]

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
duckdb = { version = "1.4.4", features = ["bundled", "parquet"] }
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors", "compression-gzip", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
parking_lot = "0.12"
rust-embed = { version = "8.11", features = ["compression"] }
mime_guess = "2"
toml = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.10"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[[bench]]
name = "ingest_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow common patterns that pedantic flags
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Multiple dependency versions from transitive deps (we can't control these)
multiple_crate_versions = "allow"
# Doc backtick warnings are noise for internal code
doc_markdown = "allow"
